# default-ffi-rust-cxx

./: .gitmodules  CMakeLists.txt.inja  template.json
__init__/: build_command.lua
include/: rust_lib.hpp
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
scripts/frate/: LICENSE  README.md  ccache.lua  compile_modes.lua  cpack.lua  flags.lua  packages.lua  sccache.lua  targets.lua  toolchains.lua  ubuntu.lua
src/: main.cpp.inja  rust_lib.cpp.inja
