[package]
name = "rust_lib"
version = "0.1.0"
authors = ["Lucas Sproule <lucas.sproule.42@gmail.com>"]
edition = "2021"
license-file = "../LICENSE"
readme  = "../README.md"
description = "Rust library for C++"
keywords = ["rust", "c++", "ffi"]
categories = ["development-tools::ffi"]
homepage = ""
repository = ""
documentation = ""


[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"
